--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ oauth2client==4.1.3
 psycopg2==2.7.3.2
 requests[security] == 2.20.0
 shortuuid==0.4.3
+sqlalchemy-redshift==0.7.3
 unicodecsv==0.14.1
 unidecode==0.04.19
 Werkzeug==0.11.2
