--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ gunicorn==19.9.0
 heroku3==3.3.0
 itsdangerous==0.24
 Jinja2==2.8
+newrelic==4.20.0.120
 nose==1.3.7
 oauth2client==4.1.3
 psycopg2==2.7.3.2
