--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Jinja2==2.8
 newrelic==4.20.0.120
 nose==1.3.7
 oauth2client==4.1.3
-psycopg2==2.7.3.2
+psycopg2-binary==2.8.2
 requests[security] == 2.20.0
 shortuuid==0.4.3
 sqlalchemy-redshift==0.7.3
