--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==0.12.3
 Flask-Compress==1.3.0
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.2
+geoip2==2.9.0
 google-cloud-bigquery==1.8.1
 gspread==3.1.0
 gunicorn==19.9.0
