--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ gunicorn==19.9.0
 heroku3==3.3.0
 itsdangerous==0.24
 Jinja2==2.8
+monthdelta=0.91
 newrelic==4.20.0.120
 nose==1.3.7
 oauth2client==4.1.3
 psycopg2-binary==2.8.2
+python-dateutil==2.6.0
 requests[security] == 2.20.0
 shortuuid==0.4.3
 sqlalchemy-redshift==0.7.3
