--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ psycopg2-binary==2.8.2
 python-dateutil==2.6.0
 requests[security] == 2.20.0
 shortuuid==0.4.3
+Sickle==0.6.4
 sqlalchemy-redshift==0.7.3
 unicodecsv==0.14.1
 unidecode==0.04.19
