--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto==2.43.0
 cached-property==1.5.1
 executor==18.0
 Flask==0.12.3
+flask-cache==0.13.1
 Flask-Compress==1.3.0
 Flask-DebugToolbar==0.10.0
 Flask-SQLAlchemy==2.2
