--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,48 @@
-boto==2.43.0
-cached-property==1.5.1
-executor==18.0
-Flask==0.12.3
-Flask-Compress==1.3.0
-Flask-DebugToolbar==0.10.0
-Flask-SQLAlchemy==2.2
-geoip2==2.9.0
-google-cloud-bigquery==1.8.1
-gspread==3.1.0
-gunicorn==19.9.0
-heroku3==3.3.0
-itsdangerous==0.24
-Jinja2==2.8
-monthdelta
-newrelic==4.20.0.120
-nose==1.3.7
-oauth2client==4.1.3
-psycopg2-binary==2.8.2
+blinker==1.4
+boto==2.49.0
+Brotli==1.0.9
+cached-property==1.5.2
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.5
+chardet==3.0.4
+click==8.0.1
+cryptography==3.4.7
+Flask==2.0.1
+Flask-Compress==1.9.0
+Flask-DebugToolbar==0.11.0
+Flask-SQLAlchemy==2.5.1
+google-api-core==1.28.0
+google-auth==1.30.1
+google-crc32c==1.1.2
+googleapis-common-protos==1.53.0
+greenlet==1.1.0
+heroku3==4.2.3
+humanfriendly==9.1
+idna==2.7
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+MonthDelta==0.9.1
+newrelic==6.4.0.157
+packaging==20.9
+protobuf==3.17.2
+psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
 python-dateutil==2.6.0
-requests[security] == 2.20.0
-shortuuid==0.4.3
-Sickle==0.6.4
-sqlalchemy-redshift==0.7.3
+pytz==2021.1
+requests==2.20.0
+rsa==4.7.2
+simplejson==3.3.1
+six==1.16.0
+SQLAlchemy==1.4.17
+sqlalchemy-redshift==0.8.2
 unicodecsv==0.14.1
-unidecode==0.04.19
-Werkzeug==0.11.2
+Unidecode==1.2.0
+urllib3==1.24.3
+verboselogs==1.7
+Werkzeug==2.0.1
