--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ google-auth==1.30.1
 google-crc32c==1.1.2
 googleapis-common-protos==1.53.0
 greenlet==1.1.0
+gunicorn==20.1.0
 heroku3==4.2.3
 humanfriendly==9.1
 idna==2.7
