--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ requests==2.20.0
 rsa==4.7.2
 simplejson==3.3.1
 six==1.16.0
+snowflake-connector-python==2.6.1
+snowflake-sqlalchemy==1.3.2
 SQLAlchemy==1.4.17
 sqlalchemy-redshift==0.8.2
 unicodecsv==0.14.1
